GNOME Bugzilla – Bug 771345
wayland: A couple of xwayland pointer warp related fixes
Last modified: 2016-09-15 02:33:43 UTC
One of the patches is just a minor refactor. The other avoids a potential crash when destroying a constraint ends up trying to enable itself.
Created attachment 335418 [details] [review] wayland/pointer-constraints: Move window-unmanaging check We should never enable a pointer constraint for an unmanaging window.
Created attachment 335419 [details] [review] wayland/pointer-constraints: Maybe remove when pointer focus changes Also maybe remove a constraint when the pointer focus changes. This is needed because when Xwayland has a constraint focus may change, the constraint object will not receive a 'appears-focused' event on its window since it never changed. This happens for example when an override-redirect window (which never appears focused) holds the constraint, and alt-tab happens. In this case focus changes, but from the constraint's point of view, none of the windows it knows about changed its focus appearance.
Comment on attachment 335418 [details] [review] wayland/pointer-constraints: Move window-unmanaging check lgtm
Comment on attachment 335419 [details] [review] wayland/pointer-constraints: Maybe remove when pointer focus changes Nice catch.
Attachment 335418 [details] pushed as 32276cf - wayland/pointer-constraints: Move window-unmanaging check Attachment 335419 [details] pushed as e1516e4 - wayland/pointer-constraints: Maybe remove when pointer focus changes