wayland/pointer-constraints: Move window-unmanaging check

We should never enable a pointer constraint for an unmanaging window.

https://bugzilla.gnome.org/show_bug.cgi?id=771345